objects/sf42_Sales_Area_Assignments__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ptt_Sales_Representative_ID__c</fullName>
        <description>ID of &quot;Accountmanager&quot; User to be used for Pardot Tasks on &quot;Assigned To&quot; field.</description>
        <label>Sales Representative ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Sales_Representative__c</fullName>
        <label>Sales Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ZIP__c</fullName>
        <label>PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>PT - Sales Area Assignments</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sf42_Business_Unit__c</columns>
        <columns>sf42_Country__c</columns>
        <columns>sf42_ZIP__c</columns>
        <columns>sf42_Region__c</columns>
        <columns>sf42_Sales_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Assigning_sales_territories_ALI</fullName>
        <columns>NAME</columns>
        <columns>sf42_ZIP__c</columns>
        <columns>sf42_Sales_Representative__c</columns>
        <columns>sf42_Region__c</columns>
        <columns>sf42_Business_Unit__c</columns>
        <columns>sf42_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Business_Unit__c</field>
            <operation>equals</operation>
            <value>ALI</value>
        </filters>
        <label>Assigning sales territories ALI</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Assigning_sales_territories_ALI_wo_de</fullName>
        <columns>NAME</columns>
        <columns>sf42_ZIP__c</columns>
        <columns>sf42_Sales_Representative__c</columns>
        <columns>sf42_Region__c</columns>
        <columns>sf42_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Business_Unit__c</field>
            <operation>equals</operation>
            <value>ALI</value>
        </filters>
        <filters>
            <field>sf42_Region__c</field>
            <operation>notContain</operation>
            <value>TB</value>
        </filters>
        <label>Assigning sales territories ALI/wo DE</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Assigning_sales_territories_CM</fullName>
        <columns>NAME</columns>
        <columns>sf42_ZIP__c</columns>
        <columns>sf42_Sales_Representative__c</columns>
        <columns>sf42_Region__c</columns>
        <columns>sf42_Business_Unit__c</columns>
        <columns>sf42_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Business_Unit__c</field>
            <operation>equals</operation>
            <value>CM</value>
        </filters>
        <label>Assigning sales territories CM</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Assigning_sales_territories_CM_wo_de</fullName>
        <columns>NAME</columns>
        <columns>sf42_ZIP__c</columns>
        <columns>sf42_Sales_Representative__c</columns>
        <columns>sf42_Region__c</columns>
        <columns>sf42_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Business_Unit__c</field>
            <operation>equals</operation>
            <value>CM</value>
        </filters>
        <filters>
            <field>sf42_Region__c</field>
            <operation>notContain</operation>
            <value>TB</value>
        </filters>
        <label>Assigning sales territories CM/wo DE</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Assigning_sales_territories_NDT</fullName>
        <columns>NAME</columns>
        <columns>sf42_ZIP__c</columns>
        <columns>sf42_Sales_Representative__c</columns>
        <columns>sf42_Region__c</columns>
        <columns>sf42_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Business_Unit__c</field>
            <operation>equals</operation>
            <value>NDT</value>
        </filters>
        <label>Assigning sales territories NDT</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Assigning_sales_territories_NDT_wo_de</fullName>
        <columns>NAME</columns>
        <columns>sf42_Country__c</columns>
        <columns>sf42_ZIP__c</columns>
        <columns>sf42_Sales_Representative__c</columns>
        <columns>sf42_Region__c</columns>
        <columns>sf42_Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Business_Unit__c</field>
            <operation>equals</operation>
            <value>NDT</value>
        </filters>
        <filters>
            <field>sf42_Region__c</field>
            <operation>notContain</operation>
            <value>DE</value>
        </filters>
        <label>Assigning sales territories NDT/wo DE</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Region_CM_TBN_Zip_Codes_17xxx_19xxx</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>sf42_Business_Unit__c</columns>
        <columns>sf42_Country__c</columns>
        <columns>sf42_ZIP__c</columns>
        <columns>sf42_Region__c</columns>
        <columns>sf42_Sales_Representative__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Region__c</field>
            <operation>equals</operation>
            <value>TBN</value>
        </filters>
        <filters>
            <field>sf42_ZIP__c</field>
            <operation>startsWith</operation>
            <value>17,18,19,2</value>
        </filters>
        <label>Region CM = TBN = Zip Codes 17xxx-19xxx,</label>
        <language>en_US</language>
    </listViews>
</CustomObject>